--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="main">
       <h1 class="main__h1">Cat's</h1>
       <img
-        src="./styles/cat-print.svg"
+        src="./img/cat-print.svg"
         alt=""
         class="main__logo" />
       <!-- Content -->
@@ -76,7 +76,7 @@
           >Ale Roses</a
         >
       </p>
-      <img class="arrow" src="./styles/arrow.svg" alt="">
+      <img class="arrow" src="./img/arrow.svg" alt="">
     </footer>
     <script type="module" src="./main.mjs"></script>
   </body>
