--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link
       rel="stylesheet"
       href="./styles/styles.css" />
+    <link
+      rel="stylesheet"
+      href="./styles/desktop.css"
+      media="(min-width: 600px)" />
 
     <link
       rel="preconnect"
@@ -76,7 +80,10 @@
           >Ale Roses</a
         >
       </p>
-      <img class="arrow" src="./img/arrow.svg" alt="">
+      <img
+        class="arrow"
+        src="./img/arrow.svg"
+        alt="" />
     </footer>
     <script type="module" src="./main.mjs"></script>
   </body>
